--- a/css_support_class/css/style.css
+++ b/css_support_class/css/style.css
@@ -4,10 +4,14 @@
     padding: 0;
 }
 
+body {
+    background-color: #1f2833;
+}
+
 body > header {
-    background-color: #2f3640;
+    background-color: #0b0c10;
     padding: 16px 0;
-    color: #f5f6fa;
+    color: #66fcf1;
 }
 
 header .container {
@@ -24,13 +28,23 @@ header li {
 }
 
 header li a {
-    color: #f5f6fa;
+    color: #66fcf1;
     text-decoration: none;
 }
 
 .container {
     width: 1366px;
     margin: 0 auto;
+}
+
+h2, 
+h3 {
+    color: #66fcf1;
+}
+
+.articles article,
+time {
+    color: #ffffff;
 }
 
 .articles {
@@ -62,13 +76,14 @@ section h2,
 }
 
 .articles article a {
-    background-color: #0000ff;
-    color: #ffffff;
+    color: #45a29e;
     padding: 8px;
     display: inline-block;
     text-decoration: none;
     font-weight: bold;
     margin-top: 8px;
+    margin: 0;
+    padding: 0;
 }
 
 .articles article a:hover {
@@ -86,35 +101,4 @@ section h2,
 
 section h2 {
     font-size: 32px;
-}
-
-#sports {
-    background-color: rgba(0, 255, 0, 0.1);
-}
-
-#sports .articles article a {
-    background-color: #009432;
-}
-
-#economy {
-    background-color: #f8f59f;
-}
-
-#economy .articles article a {
-    background-color: #ff9f1a;
-}
-
-#tecnologia {
-    background-color: rgba(255, 0, 0, 0.1);
-}
-
-#tecnologia .articles article a {
-    background-color: #a00606;
-}
-
-#tecnologia .articles article .link-externo {
-    background-color: rgba(0, 0, 0, 0.0);
-    color: #a00606;
-    margin: 0;
-    padding: 0;
 }
